--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ferrischat_snowflake_generator"
 version = "0.1.0"
 edition = "2018"
+description = "Library to generate guaranteed unique IDs for any purpose"
+license = "Unlicense"
+documentation = "https://docs.rs/ferrischat_snowflake_generator"
+homepage = "https://ferris.chat"
+repository = "https://github.com/FerrisChat/SnowflakeGenerator"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
