--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,13 @@ license = "Unlicense"
 documentation = "https://docs.rs/ferrischat_snowflake_generator"
 homepage = "https://ferris.chat"
 repository = "https://github.com/FerrisChat/SnowflakeGenerator"
+include = [
+  "**/*.rs",
+  "Cargo.toml",
+  "/.gitignore",
+  "/LICENSE",
+  "/README.md"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
